# controllers/device_controller.go
@@ -19,7 +19,7 @@ import (
 // @Router /api/device/last_locations [get]
 func GetAllDevicesLastLocation(c *fiber.Ctx) error {
 
-	rows, err := database.DBpool.Query(context.Background(), "SELECT device_id, battery_level, signal_status, is_locked FROM devices")
+	rows, err := database.DBpool.Query(context.Background(), "SELECT device_id, battery_level, signal_status, is_locked,status FROM devices")
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Error retrieving devices"})
 	}
@@ -28,7 +28,7 @@ func GetAllDevicesLastLocation(c *fiber.Ctx) error {
 	var devices []models.DeviceSchema
 	for rows.Next() {
 		var device models.DeviceSchema
-		err := rows.Scan(&device.DeviceId, &device.BatteryLevel, &device.SignalStatus, &device.IsLocked)
+		err := rows.Scan(&device.DeviceId, &device.BatteryLevel, &device.SignalStatus, &device.IsLocked, &device.Status)
 		if err != nil {
 			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Error scanning device"})
 		}
@@ -136,7 +136,7 @@ func GetDeviceLocations(c *fiber.Ctx) error {
 // @Router /api/device/all_device [get]
 func GetAllDevices(c *fiber.Ctx) error {
 
-	rows, err := database.DBpool.Query(context.Background(), "SELECT device_id, battery_level, signal_status, is_locked FROM devices")
+	rows, err := database.DBpool.Query(context.Background(), "SELECT device_id, battery_level, signal_status, is_locked,status FROM devices")
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Error retrieving devices"})
 	}
@@ -145,7 +145,7 @@ func GetAllDevices(c *fiber.Ctx) error {
 	var devices []models.DeviceAll
 	for rows.Next() {
 		var device models.DeviceAll
-		err := rows.Scan(&device.DeviceId, &device.BatteryLevel, &device.SignalStatus, &device.IsLocked)
+		err := rows.Scan(&device.DeviceId, &device.BatteryLevel, &device.SignalStatus, &device.IsLocked, &device.Status)
 		if err != nil {
 			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Error scanning device"})
 		}
@@ -158,4 +158,93 @@ func GetAllDevices(c *fiber.Ctx) error {
 	}
 
 	return c.Status(fiber.StatusOK).JSON(devices)
+}
+
+// Home_page retrieves the count of devices by their status and the latest location of each device
+// @Summary Get device status counts and latest locations
+// @Description Retrieves the count of devices grouped by their status and the latest location of each device
+// @Tags devices
+// @Accept json
+// @Produce json
+// @Success 200 {object} HomePageResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /api/main [get]
+func Home_page(c *fiber.Ctx) error {
+	// Query to get the count of devices grouped by status
+	query := `SELECT status, COUNT(*) as count FROM devices GROUP BY status;`
+	rows, err := database.DBpool.Query(context.Background(), query)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": "Failed to get status counts",
+		})
+	}
+	defer rows.Close()
+
+	var statusCounts []models.StatusCount
+	for rows.Next() {
+		var sc models.StatusCount
+		err := rows.Scan(&sc.Status, &sc.Count)
+		if err != nil {
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+				"error": "Failed to parse status count",
+			})
+		}
+		statusCounts = append(statusCounts, sc)
+	}
+
+	if rows.Err() != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": "Error occurred during rows iteration",
+		})
+	}
+
+	// Query to get the latest location of each device
+	query = "SELECT device_id, battery_level, signal_status, is_locked, status FROM devices"
+	rows, err = database.DBpool.Query(context.Background(), query)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Error retrieving devices"})
+	}
+	defer rows.Close()
+
+	var devices []models.DeviceSchema
+	for rows.Next() {
+		var device models.DeviceSchema
+		err := rows.Scan(&device.DeviceId, &device.BatteryLevel, &device.SignalStatus, &device.IsLocked, &device.Status)
+		if err != nil {
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Error scanning device"})
+		}
+
+		// Query to get the latest location of the device
+		locationQuery := "SELECT timestamp, latitude, longitude FROM device_locations WHERE device_id=$1 ORDER BY timestamp DESC LIMIT 1"
+		locationRow := database.DBpool.QueryRow(context.Background(), locationQuery, device.DeviceId)
+		var location models.DeviceLocation
+		err = locationRow.Scan(&location.Timestamp, &location.Latitude, &location.Longitude)
+		if err != nil {
+			device.Location = models.DeviceLocation{}
+		} else {
+			device.Location = location
+		}
+
+		devices = append(devices, device)
+	}
+
+	if err = rows.Err(); err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Error processing devices"})
+	}
+
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{
+		"Status":    statusCounts,
+		"Locations": devices,
+	})
+}
+
+// HomePageResponse represents the response structure for the Home_page endpoint
+type HomePageResponse struct {
+	Status        []models.StatusCount  `json:"Status"`
+	LastLocations []models.DeviceSchema `json:"Last Locations"`
+}
+
+// ErrorResponse represents the error response structure
+type ErrorResponse struct {
+	Error string `json:"error"`
 }
